Bug 1024437 - Make <datalist> work in e10s. r=MattN